--- a/src/Components/Exchange.css
+++ b/src/Components/Exchange.css
@@ -9,16 +9,14 @@
   padding: 1px;
   min-width: 25vh;
   max-width: 25vh;
-  /* background-color: #1c4753; */
-  /* border: 2px solid #e42517; */
-  /*min-height: 10vh;*/  
   align-items: center;
   justify-content: center;
   font-size: calc(7px + 1vmin);
-  color: white;
   font-family:'Roboto';
+  cursor:default;
 }
 p {
   margin: 0;
   margin-bottom: 1vh;
+  color: rgb(188, 188, 216);
 }
